k8s-deployment-resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorial
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
    - host: demo.anaisurl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-application
                port:
                  number: 80
  tls:
    - secretName: ca-key-pair
      hosts:
        - demo.anaisurl.com
